# jarv

./: .env.example  .gitattributes  .gitignore  AGENT.md  README.md  config.toml  diagnose_voice.py  hear_test.py  mic_test.py  pyproject.toml  run_dashboard.py  run_heartbeat.py  run_text.py  run_voice.py
jarvis/: __init__.py  app.py  config.py
jarvis/adapters/: __init__.py  text_repl.py
jarvis/adapters/voice/: __init__.py  console_session.py  mic.py  player.py  session.py  stt.py  tts.py
jarvis/core/: __init__.py  agent.py  conversation.py  provider.py  system_prompt.py
jarvis/dashboard/: __init__.py  server.py
jarvis/heartbeat/: __init__.py  checks.py  inbox.py  quiet_hours.py  runner.py
jarvis/memory/: __init__.py  store.py
jarvis/rails/: __init__.py  audit.py  gate.py  killswitch.py  sanitize.py
jarvis/tools/: __init__.py  base.py  content.py  imagegen.py  instagram.py  intake.py  leads.py  leadwork.py  memory.py  registry.py  social.py
