[project]
name = "jarvis"
version = "0.1.0"
description = "Jarvis — a voice-first personal AI assistant harness"
requires-python = ">=3.11"
dependencies = [
    # Tier 1 — brain
    "anthropic==0.69.0",
    "python-dotenv==1.0.1",
    # Tier 2 — tools
    "openpyxl==3.1.5",
    "requests==2.32.3",
    # Tier 3 — voice (pins verified against the installed packages)
    "deepgram-sdk==7.4.0",
    "elevenlabs==2.54.0",
    "sounddevice==0.5.5",
    "numpy==2.5.0",
    "pynput==1.8.2",
    # Tier 5 — heartbeat
    "APScheduler==3.11.0",
    # Dashboard — local web monitoring panel
    "Flask==3.1.0",
    # Furniture pipeline — AI photo staging
    "openai==2.44.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jarvis"]
